--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -20,9 +20,10 @@ jobs:
         ./build_linux.sh archive
       shell: bash
     - name: Upload Artifact
-      uses: actions/upload-artifact@v3
+      run: echo "TIMESTAMP=`date '+%Y%m%d%H%M'`" >> $GITHUB_ENV
+      uses: actions/upload-artifact@v4
       with:
-        name: Binaries
+        name: Binaries-${{ env.TIMESTAMP }}
         path: archive/*.tar.gz
         retention-days: 30
   release:
